--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 greeting:
   message: "hello"
+
+quarkus:
+  datasource:
+    db-kind: h2
+    username: koh0118
+    password: koh0118
+    jdbc:
+      url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+  hibernate-orm:
+    database:
+      generation: drop-and-create
+    sql-load-script: import.sql
