--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,20 @@
-greeting:
-  message: "hello"
-
 quarkus:
+  http:
+    port: 8080
+
   datasource:
     db-kind: h2
     username: koh0118
     password: koh0118
     jdbc:
-      url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+      url: jdbc:h2:file:/data/db/testdb;DB_CLOSE_DELAY=-1
   hibernate-orm:
     database:
       generation: drop-and-create
     sql-load-script: import.sql
+    log:
+      sql: true
+  log:
+    category:
+      "com.koh0118":
+        level: DEBUG
