--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ quarkus:
       url: jdbc:h2:file:/data/db/testdb;DB_CLOSE_DELAY=-1
   hibernate-orm:
     database:
-      generation: update
+      generation: drop-and-create
     sql-load-script: import.sql
     log:
       sql: true
